Version 2.2.14 - T'Sou-ke
-------------------------------
Core - General
  - Site Prefs, remove submit confirmation.
  - cms_http_request PHP 7.4 fix "Array and string offset access syntax with curly braces is deprecated".
  - System Maintenance, remove confirmation update page hierarchy positions and routes.
  - BR #12227 - Stored Cross-Site Scripting

Design Manager
  - BR #12225 - Reflected Cross-Site Scripting. Minor, because it can only be performed by a person that has access rights to the Admin panel.

File Manager
  - BR #12224 - Reflected Cross-Site Scripting. Minor, because it can only be performed by a person that has access rights to the Admin panel.

News
  - BR #12207 - Can't display image in news when using upload field.
  - BR #12228 - Stored Cross-Site Scripting. Minor, because it can only be performed by a person that has access rights to the Admin panel.
  - Minor code fix.

Phar Installer
  - PHP 7.4 fix "Array and string offset access syntax with curly braces is deprecated".
  - PHP 7.4 fix "Function get_magic_quotes_runtime() is deprecated".

Search
  - PHP 7.4 fix "Array and string offset access syntax with curly braces is deprecated".


Version 2.2.13 - Moosomin
-------------------------------
Core - General
   - Explicitly add a function or two to the allowed functions in PHP secure mode.

DesignManager v1.1.7
   - Fix a warning in PHP 7.3+.

FileManager v1.6.10
   - Fix minor XSS vulnerabilities in FileManager.

News v2.51.8
   - Fix a security issue in the default action with the idlist param.
   (This version was also separately released in the forge).


Version 2.2.12 - Osoyoos
-------------------------------
NOTICE: Due to the nature of the security issue fixed in FileManager after upgrading you should change your database password.

Core - General
  - Fix warning in cms_html_entity_decode.

FileManager v1.6.9.1
  - Security fixes for view action.


Version 2.2.11 - Vulcan
-------------------------------
Core - General