@@ -1,10 +1,11 @@
 Version 2.2.14 - T'Sou-ke
 -------------------------------
 Core - General
+  - Explicitly add getimagesize function to the allowed functions in PHP secure mode.
   - Site Prefs, remove submit confirmation.
-  - cms_http_request PHP 7.4 fix "Array and string offset access syntax with curly braces is deprecated".
   - System Maintenance, remove confirmation update page hierarchy positions and routes.
-  - BR #12227 - Stored Cross-Site Scripting
+  - cms_http_request PHP 7.4 fix "Array and string offset access syntax with curly braces is deprecated".
+  - BR #12227 - Stored Cross-Site Scripting. Minor, because it can only be performed by a person that has access rights to the Admin panel.
 
 Design Manager
   - BR #12225 - Reflected Cross-Site Scripting. Minor, because it can only be performed by a person that has access rights to the Admin panel.
